--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -574,7 +574,7 @@ ul.job_listings {
 	}
 }
 .job_listing_preview {
-	padding: 0 1em 1em;
+	padding: 1em;
 	border: 5px solid #eee;
 }
 .job_listing_preview_title, .entry-content .job_listing_preview_title {
