Change the vertical alignment of the icons

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -33,7 +33,7 @@
 	text-decoration: none;
 	font-weight: normal;
 	font-style: normal;
-	vertical-align: top;
+	vertical-align: middle;
 	font-size: 16px;
 	margin: 0 2px 0 0;
 
