Make sure the buttons are inline blocks

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -143,6 +143,11 @@
 		.account-sign-in {
 			.button {
 				margin-right: .5em;
+				display: inline-block;
+
+				*overflow: auto;
+				*zoom: 1;
+				*display: inline;
 				&:before {
 					.display-icon;
 					content: '\f427';
