--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -131,8 +131,8 @@
 			float: left;
 			vertical-align: middle;
 			small {
-				font-style: italic;
 				opacity: .75;
+				font-size: 0.83em;
 			}
 		}
 		div.field {
@@ -163,8 +163,11 @@
 			box-sizing: border-box;         /* Opera/IE 8+ */
 		}
 		small.description {
-			font-style: italic;
 			opacity: .75;
+			font-size: 0.83em;
+			margin: 1.2em 0 0 0;
+			display: block;
+			line-height: 1.2em;
 		}
 		.uploaded_image {
 			line-height: 64px;
