--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -95,10 +95,11 @@
 		}
 	}
 	.column-job_actions {
-		width:110px;
+		width:120px;
+		text-align: right;
 		a.button {
-			float:left;
-			margin: 0 4px 2px 0;
+			display: inline-block;
+			margin: 0 0 2px 4px;
 			cursor: pointer;
 			padding:3px 4px;
 			height:auto;
@@ -162,7 +163,7 @@
 	font-size: 11px;
 	color: #fff;
 	padding: 4px 8px;
-	background:#000;
+	background:#464646;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
@@ -186,23 +187,23 @@
 #tiptip_holder.tip_top #tiptip_arrow_inner {
 	margin-top: -7px;
 	margin-left: -6px;
-	border-top-color: #000;
+	border-top-color: #464646;
 }
 
 #tiptip_holder.tip_bottom #tiptip_arrow_inner {
 	margin-top: -5px;
 	margin-left: -6px;
-	border-bottom-color: #000;
+	border-bottom-color: #464646;
 }
 
 #tiptip_holder.tip_right #tiptip_arrow_inner {
 	margin-top: -6px;
 	margin-left: -5px;
-	border-right-color: #000;
+	border-right-color: #464646;
 }
 
 #tiptip_holder.tip_left #tiptip_arrow_inner {
 	margin-top: -6px;
 	margin-left: -7px;
-	border-left-color: #000;
+	border-left-color: #464646;
 }
