Filter jobs by category (shortcode arg)

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -515,7 +515,7 @@ ul.job_listings {
 				float: right;
 				padding-left: .5em;
 			}
-			&.search_category {
+			&.search_categories {
 				padding-top: .5em;
 				clear: both;
 				width: 100%;
