--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -123,7 +123,7 @@
 		padding: 0 0 1em 0;
 		line-height: 2em;
 		border-bottom: 1px solid #eee;
-		overflow: hidden;
+		.clearfix;
 		label {
 			display: block;
 			margin: 0;
@@ -568,11 +568,9 @@ ul.job_listings {
 		background: #f9f9f9;
 		border-top: 1px solid #e5e5e5;
 
-		.reset, .rss_link {
+		a {
 			float: right;
-		}
-		.rss_link {
-			padding-right: 10px;
+			padding-left: 10px;
 		}
 	}
 }
