--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -287,6 +287,15 @@ ul.job_listings {
 				}
 			}
 		}
+		&.job_position_featured {
+			a {
+				background: #fefee5;
+
+				&:hover, &:focus {
+					background-color: #fefed8;
+				}
+			}
+		}
 	}
 }
 .widget {
