--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -240,7 +240,8 @@
 				margin: 0 !important;
 				padding: 10px 20px !important;
 				line-height: 1;
-				background: rgba(255,255,255,0.3);
+				background: rgba(255,255,255,0.8);
+				color: #000;
 				position: absolute;
 				max-width: 280px;
 				top: 20px;
