Add clearfix Closes #61

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -191,7 +191,7 @@ div.job_listings {
 }
 ul.job_listings {
 	padding: 0;
-	margin: 0 !important;
+	margin: 0;
 	border-top: 1px solid #eee;
 
 	&.loading {
@@ -403,6 +403,7 @@ ul.job_listings {
 		margin: 0 0 1.5em;
 		overflow: hidden;
 		zoom: 1;
+		clear: both;
 		li {
 			margin: 0 1em 0 0;
 			padding: .5em;
