Ability to remove image from job submission form Closes #75

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -168,7 +168,7 @@
 			display: block;
 			line-height: 1.2em;
 		}
-		.uploaded_image {
+		.job-manager-uploaded-image {
 			line-height: 64px;
 			font-style: italic;
 			margin: 0 0 1em 0;
