Add border to wp editor Closes #105

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -129,6 +129,12 @@
 			float: right;
 			vertical-align: middle;
 		}
+		.wp-editor-container {
+			border: 1px solid #ccc;
+			-webkit-border-radius: 3px;
+			-moz-border-radius: 3px;
+			border-radius: 3px;
+		}
 		.account-sign-in {
 			.button {
 				margin-right: .5em;
