Give listings ul a min height so that loading image is visible Closes #146

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -192,7 +192,9 @@ ul.job_listings {
 	border-top: 1px solid #eee;
 
 	&.loading {
-		background: url(../images/ajax-loader.gif) no-repeat center;
+		min-height: 96px;
+		border-bottom: 1px solid #eee;
+		background: url(../images/ajax-loader.gif) no-repeat center 32px;
 	}
 	li.job_listing, li.no_job_listings_found {
 		list-style: none outside;
