--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -43,7 +43,7 @@
 	color: @secondarytext;
 	.text_shadow( 0, 1px, 0, lighten( @secondary, 4 ) );
 	list-style:none outside;
-	.clearfix();
+	.clearfix;
 	width: auto;
 	-webkit-box-shadow:
 		inset 0 -2px 6px rgba(0,0,0,0.05),
