Update add ons page for wpjobmanager.com

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -238,7 +238,7 @@
 
 /* Addons */
 .wp_job_manager_addons_wrap {
-	.items {
+	.products {
 		overflow: hidden;
 		li {
 			display: inline-block;
@@ -265,18 +265,21 @@
 				display: block;
 				margin: 0;
 				background: #fff;
+				border-bottom: 1px solid rgba(0,0,0,0.1);
 			}
 			h2 {
 				margin: 0 !important;
-				padding: 10px 20px !important;
+				padding: 10px 10px !important;
 				line-height: 1;
-				background: rgba(255,255,255,0.8);
+				background: rgba(255,255,255,0.6);
+				border-bottom: 1px solid rgba(0,0,0,0.1);
 				color: #000;
+				text-align: center;
 				position: absolute;
-				max-width: 280px;
-				top: 20px;
+				width: 230px;
+				top: 0;
 				left: 0;
-				font-size: 18px;
+				font-size: 16px;
 				text-shadow: none;
 			}
 			.third_party {
@@ -287,7 +290,7 @@
 				margin: 0 !important;
 				border-top: 1px solid #f1f1f1;
 			}
-			.cost {
+			.price {
 				display: none;
 			}
 		}
