--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -446,35 +446,32 @@ ul.job_listings {
 		}
 	}
 	.application {
-		overflow: hidden;
-		zoom: 1;
-		padding-left: 20px;
+		padding: 0;
 		margin: 0 0 1em;
-
+		
 		.application_button, .application_details {
 			-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 			-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 			box-sizing: border-box;         /* Opera/IE 8+ */
 		}
-
 		.application_button {
 			text-align: center;
-			font-size: 1.2em;
+			font-size: 1.1em;
 			line-height: 1em;
-			width: 33.3%;
 			float: left;
-			margin: 0 0 0 -20px;
-			padding: 1/1.2em;
+			margin: 0 .5em 20px 0;
+			padding: 1/1.1em 2em;
+			outline: 0;
 		}
 		.application_details {
-			float: right;
-			width: 66.6%;
+			clear: both;
 			border: 1px solid #eee;
 			padding: .75em 1em 0;
 			margin: 0;
 			line-height: 1.5em;
 			display: block;
 			position: relative;
+			box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 
 			p {
 				margin: 0 0 .75em;
@@ -483,26 +480,26 @@ ul.job_listings {
 			&:before {
 				content: "";
 				position: absolute;
-				margin: 0 0 0 -10px;
-				left: 0;
-				top: 1em;
+				margin: -10px 0 0 0;
+				top: 0;
+				left: 5em;
 				width: 0;
 				height: 0;
-				border-top: 10px solid transparent;
-				border-bottom: 10px solid transparent;
-				border-right:10px solid #eee;
+				border-left: 10px solid transparent;
+				border-right: 10px solid transparent;
+				border-bottom:10px solid #eee;
 			}
 			&:after {
 				content: "";
 				position: absolute;
-				margin: 1px 0 0 -9px;
-				top: 1em;
-				left: 0;
+				margin: -9px 0 0 1px;
+				left: 5em;
+				top: 0;
 				width: 0;
 				height: 0;
-				border-top: 9px solid transparent;
-				border-bottom: 9px solid transparent;
-				border-right: 9px solid #fff;
+				border-left: 9px solid transparent;
+				border-right: 9px solid transparent;
+				border-bottom: 9px solid #fff;
 			}
 		}
 	}
