New field types
#232

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -178,7 +178,25 @@
 	.submit-job {
 		padding: 1em 0;
 	}
-
+	.job-manager-term-checklist {
+		list-style: none outside;
+		max-height: 200px;
+		overflow: auto;
+		margin: 0;
+		li {
+			list-style: none outside;
+			margin: 0;
+			display: block;
+			float: none;
+			label {
+				width: auto;
+				float: none;
+			}
+			li {
+				margin: 0 0 0 2em;
+			}
+		}
+	}
 }
 div.job_listings {
 	margin-bottom: 1em;
