--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -45,11 +45,6 @@
 	list-style:none outside;
 	.clearfix;
 	width: auto;
-	-webkit-box-shadow:
-		inset 0 -2px 6px rgba(0,0,0,0.05),
-		inset 0 -2px 30px rgba(0,0,0,0.015),
-		inset 0 1px 0 #fff,
-		0 1px 2px rgba(0,0,0,0.3);
 	box-shadow:
 		inset 0 -2px 6px rgba(0,0,0,0.05),
 		inset 0 -2px 30px rgba(0,0,0,0.015),
@@ -375,15 +370,16 @@ ul.job_listings {
 	.company {
 		position: relative;
 		border: 1px solid #eee;
-		padding: 1em 1em 1em 42px;
+		padding: 1em;
 		margin: 0 0 2em;
 		display: block;
 		clear: both;
-		min-height: 42px;
+		min-height: 3em;
+		box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 
 		img {
-			width: 42px;
-			height: 42px;
+			width: 3em;
+			height: 3em;
 			position: absolute;
 			left: 1em;
 			float: left;
@@ -391,8 +387,9 @@ ul.job_listings {
 			box-shadow: none;
 		}
 		.name {
-			margin: 0;
-			padding: 0 0 0 2em;
+			margin: 0 0 0 3em;
+			padding: 0 0 0 1em;
+			line-height: 1.5em;
 			a {
 				float: right;
 				margin-left: 1em;
@@ -400,8 +397,9 @@ ul.job_listings {
 		}
 		.tagline {
 			display: block;
-			margin: 0;
-			padding: 0 0 0 2em;
+			margin: 0 0 0 42px;
+			padding: 0 0 0 1em;
+			line-height: 1.5em;
 			font-style: italic;
 			color: #999;
 		}
@@ -412,6 +410,15 @@ ul.job_listings {
 		.company_twitter:before {
 			.display-icon;
 			content: '\e80a';
+		}
+		.company_video {
+			border-top: 1px solid #eee;
+			padding: 1em 0 0;
+			margin: 1em 0 0 0;
+			iframe {
+				margin: 0;
+				display: block;
+			}
 		}
 	}
 	.meta {
