--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -242,8 +242,7 @@ ul.job_listings {
 			overflow: hidden;
 			zoom: 1;
 			position: relative;
-			line-height: 3em;
-			font-size: 1em;
+			line-height: 1.5em;
 			text-decoration: none;
 
 			&:hover, &:focus {
@@ -266,18 +265,17 @@ ul.job_listings {
 			}
 			div.position {
 				float: left;
-				width: 60%;
+				width: 55%;
 				padding: 0 0 0 42px;
 				line-height: 1.5em;
 				h3 {
 					margin: 0;
 					padding: 0;
-					font-size: 1em;
-					line-height: 1.5em;
+					line-height: inherit;
+					font-size: inherit;
 				}
 				.company {
 					color: #999;
-					font-size: 0.75em;
 					.tagline {
 						margin-left: .5em;
 					}
@@ -286,10 +284,10 @@ ul.job_listings {
 			div.location {
 				float: left;
 				text-align: left;
-				width: 20%;
+				width: 25%;
 				padding: 0 0 0 1em;
 				color: #999;
-				font-size: 0.75em;
+				line-height: 1.5em;
 			}
 			.meta {
 				float: right;
@@ -303,7 +301,6 @@ ul.job_listings {
 				li {
 					list-style: none outside;
 					display: block;
-					font-size: 0.75em;
 					margin: 0;
 				}
 				.job-type {
@@ -876,5 +873,19 @@ nav.job-manager-pagination, #content nav.job-manager-pagination {
 				}
 			}
 		}
+	}
+}
+
+// Default theme fixes
+.twenty-eleven {
+	ul.job_listings {
+		li.job_listing, li.no_job_listings_found {
+			padding: 0 !important;
+		}
+	}
+}
+.twenty-ten {
+	.job_types, .chosen-choices {
+		margin: 0 !important;
 	}
 }
