Login link on job dashboard. job-dashboard-login.php template file.

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -758,6 +758,15 @@ div.job_listings {
 }
 
 #job-manager-job-dashboard {
+	.account-sign-in {
+		.button {
+			margin-right: .5em;
+			&:before {
+				.display-icon;
+				content: '\e808';
+			}
+		}
+	}
 	table {
 		ul.job-dashboard-actions {
 			margin: 0;
