Add CSS class to 'showing' bar when shoing all results (no filters).
Closes #326

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -240,6 +240,7 @@ ul.job_listings {
 		a {
 			display: block;
 			padding: 1em 1em 1em 2em;
+			border: 0;
 			overflow: hidden;
 			zoom: 1;
 			position: relative;
@@ -384,7 +385,7 @@ ul.job_listings {
 		margin: 0 0 2em;
 		display: block;
 		clear: both;
-		min-height: 3em;
+		min-height: 5em;
 		box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 
 		img {
@@ -616,6 +617,7 @@ ul.job_listings {
 		a {
 			float: right;
 			padding-left: 10px;
+			border: 0;
 		}
 	}
 }
@@ -641,6 +643,7 @@ div.job_listings {
 		}
 		&:hover, &:focus {
 			background-color: #fcfcfc;
+			border-bottom: 1px solid #eee;
 		}
 	}
 }
@@ -839,6 +842,7 @@ nav.job-manager-pagination, #content nav.job-manager-pagination {
 				padding: .5em;
 				min-width: 1em;
 				display: block;
+				border: 0;
 			}
 			span.current, a:hover, a:focus {
 				background: #eee;
