Chosen width when resizing the page.
Closes #344

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -890,6 +890,11 @@ nav.job-manager-pagination, #content nav.job-manager-pagination {
 	}
 }
 
+// Chosen fixes
+.chosen-container {
+	width: 100% !important;
+}
+
 // Default theme fixes
 .twenty-eleven {
 	ul.job_listings {
