--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -94,7 +94,7 @@
 			height: 32px;
 			position: absolute;
 			right: 7px;
-			top: 4px;
+			top: 0;
 			.border_radius( 50% );
 			.box_shadow( 0, 1px, 0, 1px, rgba( 0,0,0,0.1 ) );
 			border: 1px solid #fff;
