Feature - Ajax loading history - back button will take you back to current position in the search. If you are on > page 1, a 'load previous' button will be shown so you can paginate either way.
Closes #378

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -630,6 +630,12 @@ div.job_listings {
 		border-bottom: 1px solid #eee;
 		line-height: 1;
 	}
+	.load_previous {
+		border-top: 1px solid #eee;
+	}
+	.load_more_jobs + ul.job_listings {
+		border-top: 0;
+	}
 	.load_more_jobs {
 		text-align: center;
 		display: block;
