--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -481,6 +481,18 @@ ul.job_listings {
 			content: '\e80e';
 		}
 	}
+}
+.job-manager-application-wrapper {
+	clear: both;
+	border: 1px solid #eee;
+	padding: .75em 1em 0;
+	margin: 1em 0;
+	line-height: 1.5em;
+	display: block;
+	position: relative;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+}
+.single_job_listing, .job-manager-application-wrapper {
 	.application {
 		padding: 0;
 		margin: 0 0 1em;
