Option to "Hide content within expired listings". If disabled, expired listings will be listed normally with applications disabled.
Closes #386

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -467,7 +467,7 @@ ul.job_listings {
 		.internship {
 			background-color: @internship;
 		}
-		.position-filled {
+		.position-filled, .listing-expired {
 			color: #b81c23;
 		}
 		.location:before {
@@ -478,7 +478,7 @@ ul.job_listings {
 			.display-icon;
 			content: '\e80f';
 		}
-		.position-filled:before {
+		.position-filled:before, .listing-expired:before {
 			.display-icon;
 			content: '\e80e';
 		}
