--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -381,3 +381,23 @@
 		}
 	}
 }
+.rtl {
+	.widefat {
+		.column-job_actions {
+			a.button-icon {
+				&:before {
+					float: right;
+				}
+			}
+		}
+	}
+	.wp_job_manager_meta_data {
+		p {
+			padding: 0 20% 0 0;
+		}
+		label {
+			left: auto;
+			right: 0;
+		}
+	}
+}
