Admin styling tweaks

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -152,38 +152,72 @@
 		}
 	}
 }
-.wp_job_manager_meta_data {
-	p {
+#job_listing_data {
+	.inside {
+		padding: 0;
+	}
+	.wp_job_manager_meta_data {
 		overflow: hidden;
-		margin: 0 0 1em;
-		padding: 0 0 0 20%;
-		position: relative;
-		line-height: 2em;
-	}
-	label {
-		width: 20%;
-		position: absolute;
-		left: 0;
-		vertical-align: middle;
-	}
-	input {
-		width: 50%;
-		margin: 1px 0;
-		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-		-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-		box-sizing: border-box;         /* Opera/IE 8+ */
-		vertical-align: middle;
-	}
-	input.checkbox {
-		width: auto;
-		margin: 4px 2px;
-	}
-	.description {
-		display: block;
-		color: #999;
-	}
-	.form-field-checkbox .description {
-		display: inline;
+		padding: 0 0 12px;
+		.form-field {
+			width: 50%;
+			line-height: 2em;
+			float: left;
+			box-sizing: border-box;
+			//border-bottom: 1px solid #eee;
+			padding: 0 12px;
+			margin: 0 0 1em;
+			clear: left;
+			&:nth-child(even) {
+				float: right;
+				clear: none;
+			}
+			&:nth-last-child(-n+2) {
+				margin-bottom: 0;
+				padding-bottom: 0;
+				border-bottom: 0;
+			}
+			label {
+				/*width: 20%;
+				position: absolute;
+				left: 0;*/
+				vertical-align: middle;
+				display: block;
+				font-weight: bold;
+				margin: 0;
+			}
+			.tips {
+				cursor: help;
+				float: right;
+				font-weight: normal;
+				color: #999;
+			}
+			input {
+				width: 100%;
+				margin: 1px 0;
+				-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+				-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+				box-sizing: border-box;         /* Opera/IE 8+ */
+				vertical-align: middle;
+			}
+			input.checkbox {
+				width: auto;
+				margin: 4px 2px;
+				display: inline-block;
+			}
+			.description {
+				display: block;
+				color: #999;
+			}
+			&.form-field-checkbox .description {
+				display: inline;
+			}
+			.file_url {
+				input {
+					width: 75%;
+				}
+			}
+		}
 	}
 }
 
