--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -35,65 +35,49 @@
 /* =Global styles/layout
 -------------------------------------------------------------- */
 .job-manager-message, .job-manager-error, .job-manager-info {
-	padding: 1em 1em 1em 3.5em;
-	margin: 0 0 2em;
+	padding: 1em 2em 1em 3.5em !important;
+	margin: 0 0 2em !important;
 	position: relative;
-	.border_radius(4px);
-	.vertical_gradient( lighten( @secondary, 2 ), @secondary );
-	color: @secondarytext;
-	.text_shadow( 0, 1px, 0, lighten( @secondary, 4 ) );
-	list-style:none outside;
-	.clearfix;
+	background-color: lighten(@secondary,5%);
+	color: $secondarytext;
+	border-top: 3px solid @primary;
+	list-style: none outside !important;
 	width: auto;
-	box-shadow:
-		inset 0 -2px 6px rgba(0,0,0,0.05),
-		inset 0 -2px 30px rgba(0,0,0,0.015),
-		inset 0 1px 0 #fff,
-		0 1px 2px rgba(0,0,0,0.3);
-
+	.clearfix;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.2);
 	&:before {
 		content: "";
-		height: 1.5em;
-		width: 1.5em;
-		display:block;
-		position:absolute;
-		top: 0;
-		left: 1em;
 		font-family: sans-serif;
-		font-size:1em;
-		line-height: 1.5;
-		text-align: center;
-		color: #fff;
-		text-shadow:0 1px 0 rgba(0,0,0,0.2);
-		padding-top:1em;
-		.border_radius_bottom(4px);
-		.inset_box_shadow(0,-1px,0,0,rgba(0,0,0,0.1));
+		display: inline-block;
+		position: absolute;
+		top: 1em;
+		left: 1.5em;
 	}
 	li {
-		list-style:none outside;
-		padding-left:0;
-		margin-left:0;
+		list-style: none outside !important;
+		padding-left: 0 !important;
+		margin-left: 0 !important;
 	}
 	&.job-manager-message {
-		border-top:3px solid #8fae1b;
+		border-top-color: #8fae1b;
 		&:before {
-			background-color:#8fae1b;
+			color:#8fae1b;
 			content: "\2713";
 		}
 	}
 	&.job-manager-info {
-		border-top:3px solid #1e85be;
+		border-top-color: #1e85be;
 		&:before {
-			background-color:#1e85be;
+			color:#1e85be;
 			content: "i";
 			font-family: Times, Georgia, serif;
 			font-style: italic;
 		}
 	}
 	&.job-manager-error {
-		border-top:3px solid #b81c23;
+		border-top-color: #b81c23;
 		&:before {
-			background-color:#b81c23;
+			color:#b81c23;
 			content: "\00d7";
 			font-weight: 700;
 		}
