Support radio inputs
Closes #469

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -243,7 +243,7 @@
 			box-sizing: border-box;         /* Opera/IE 8+ */
 			vertical-align: middle;
 		}
-		input.checkbox {
+		input.checkbox, input.radio {
 			width: auto;
 			margin: 4px 2px;
 			display: inline-block;
