Fix - Alert text color.
Closes #548

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -39,7 +39,7 @@
 	margin: 0 0 2em !important;
 	position: relative;
 	background-color: lighten(@secondary,5%);
-	color: $secondarytext;
+	color: @secondarytext;
 	border-top: 3px solid @primary;
 	list-style: none outside !important;
 	width: auto;
