When replacing content on single job listings, maintain original content.

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -479,6 +479,9 @@ ul.job_listings {
 			content: '\e80e';
 		}
 	}
+	.job_description {
+		margin: 0 0 1.5em;
+	}
 }
 .job-manager-application-wrapper {
 	clear: both;
