--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -671,7 +671,8 @@ div.job_listings {
 	padding: 0 1em 1em;
 	border: 5px solid #eee;
 }
-.single-job_listing .entry-header .attachment-post-thumbnail {
+.single-job_listing .entry-header .attachment-post-thumbnail,
+.single-job_listing .job_listing.has-post-thumbnail .post-thumbnail {
 	display: none;
 }
 .job_listing_preview_title, .entry-content .job_listing_preview_title {
