Fix Post Column Responsiveness #3 - Set "Job Position" as primary columns - Set "Job Position" as 1st column - Remove Action Links in Primary Columns. - Add "Show more details" button in "Job Position" custom columns callback - Fix CSS for action buttons in mobile

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -488,3 +488,37 @@
 		}
 	}
 }
+
+/**
+ * Mobile styles
+ */
+@media only screen and (max-width: 767px) {
+	.widefat {
+		.column-job_actions {
+			text-align: left;
+
+			a.button-icon {
+				&:before {
+					float: left;
+				}
+			}
+		}
+	}
+	.rtl {
+		.widefat {
+			.column-job_actions {
+				text-align: right;
+
+				a.button-icon {
+					&:before {
+						float: right;
+					}
+				}
+			}
+		}
+	}
+}
+
+
+
+
