responsive admin column css fix

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -494,6 +494,12 @@
  */
 @media only screen and (max-width: 767px) {
 	.widefat {
+		.job_position.column-primary{
+			display: table-cell !important;
+		}
+		.toggle-row:before{
+			top: 5px;
+		}
 		.column-job_actions {
 			text-align: left;
 
@@ -518,7 +524,3 @@
 		}
 	}
 }
-
-
-
-
